Implementação do CSS

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Perfil</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-   <ul>
+   <ul id="menu">
         <li>
             <a href="index.html">Home</a>
         </li>
@@ -15,27 +16,44 @@
         </li>
    </ul>
    
-    <h1>Sobre a Estela Maria </h1>
+    <h1 class="center">Sobre a Estela Maria </h1>
 
-    <p> 
-        Mussum Ipsum, cacilds vidis litro abertis. Manduma pindureta quium dia nois paga. Suco de cevadiss, é um leite divinis, qui tem lupuliz, matis, aguis e fermentis. Detraxit consequat et quo num tendi nada. Quem manda na minha terra sou euzis!
-        Não sou faixa preta cumpadi, sou preto inteiris, inteiris. Si u mundo tá muito paradis? Toma um mé que o mundo vai girarzis! Cevadis im ampola pa arma uma pindureta. Vehicula non. Ut sed ex eros. Vivamus sit amet nibh non tellus tristique interdum.
-    </p> 
-    <p> 
-        Mussum Ipsum, interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis. Casamentiss faiz malandris se pirulitá. Delegadis gente finis, bibendum egestas augue arcu ut est. Posuere libero varius. Nullam a nisl ut ante blandit hendrerit. 
-        Aenean sit amet nisi. Nec orci ornare consequat. Praesent lacinia ultrices consectetur. Sed non ipsum felis. Praesent vel viverra nisi. Mauris aliquet nunc non turpis scelerisque, eget.
-    </p>
+   <div class="container">
+     <div class="justify p-30">
+        <p> 
+            Mussum Ipsum, cacilds vidis litro abertis. Manduma pindureta quium dia nois paga. Suco de cevadiss, é um leite divinis, qui tem lupuliz, matis, aguis e fermentis. Detraxit consequat et quo num tendi nada. Quem manda na minha terra sou euzis!
+            Não sou faixa preta cumpadi, sou preto inteiris, inteiris. Si u mundo tá muito paradis? Toma um mé que o mundo vai girarzis! Cevadis im ampola pa arma uma pindureta. Vehicula non. Ut sed ex eros. Vivamus sit amet nibh non tellus tristique interdum.
+        </p> 
+        <p> 
+         Mussum Ipsum, interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis. Casamentiss faiz malandris se pirulitá. Delegadis gente finis, bibendum egestas augue arcu ut est. Posuere libero varius. Nullam a nisl ut ante blandit hendrerit. 
+            Aenean sit amet nisi. Nec orci ornare consequat. Praesent lacinia ultrices consectetur. Sed non ipsum felis. Praesent vel viverra nisi. Mauris aliquet nunc non turpis scelerisque, eget.
+        </p>
+     </div>
+     <div>
+        <img class="br-50 wh-300 p-30" src="assets/img/estelaMaria.jpg" alt="Foto do rosto da Estela Maria, criadora desse contéudo. Ela aparece do ombro para cima, sorrindo, com o cabelo ondulado solto, ela é branca e tem olhos castanhos, está vestindo uma blusa de frio roxa. Ao fundo tem uma parede cinza, com pixações e atrás o céu está azul, com poucas nuvens e com um fino arco-íris natural no céu.">
+     </div>
+   </div>
 
-    <img src="" alt="Foto do rosto da Estela Maria, criadora desse contéudo.">
-    <!--Colocar mais descrição da foto depois que ela for escolhida-->
+   <h2 class="center">Vídeo:</h2>
+   <div class="container mb-50">
+        <iframe 
+         width="560" 
+        height="315" 
+        src="https://www.youtube.com/embed/PzYFK6d8a3w" 
+        frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+        allowfullscreen> </iframe>
+   </div>
 
-    <iframe 
-    width="560" 
-    height="315" 
-    src="https://www.youtube.com/embed/PzYFK6d8a3w" 
-    frameborder="0" 
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-    allowfullscreen></iframe>
+   <hr>
+   <footer class="center">
+     
+     <div class="container">
+       <a href="https://www.linkedin.com/in/estela-maria-costa-monteiro-367907179/" target="_blank"> <img class="tm-social" src="assets/img/linkedin.png" alt="Logo azul da Rede Social LinkIn"> </a> 
+       <a href="https://github.com/githubdaestela" target="_blank"> <img class="tm-social" src="assets/img/github.png" alt="Logo preto da palataforma de versionamento GitHub"> </a>
+     </div>
+        <p>Todos os direitos reservados: Estela Maria &copy</p>
+   </footer>
 
 </body>
 </html>
