Implementação do JavaScript

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Perfil</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
    <ul id="menu">
@@ -36,24 +36,25 @@
 
    <h2 class="center">Vídeo:</h2>
    <div class="container mb-50">
-        <iframe 
-         width="560" 
-        height="315" 
-        src="https://www.youtube.com/embed/PzYFK6d8a3w" 
-        frameborder="0" 
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-        allowfullscreen> </iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/PzYFK6d8a3w" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen> </iframe>
    </div>
 
    <hr>
+
    <footer class="center">
-     
-     <div class="container">
-       <a href="https://www.linkedin.com/in/estela-maria-costa-monteiro-367907179/" target="_blank"> <img class="tm-social" src="assets/img/linkedin.png" alt="Logo azul da Rede Social LinkIn"> </a> 
-       <a href="https://github.com/githubdaestela" target="_blank"> <img class="tm-social" src="assets/img/github.png" alt="Logo preto da palataforma de versionamento GitHub"> </a>
-     </div>
-        <p>Todos os direitos reservados: Estela Maria &copy</p>
-   </footer>
+
+    <div class="container">
+       <a href="linkedin.com/in/estela-maria-costa-monteiro-367907179/" target="_blank"> 
+           <img class="tm-social" src="assets/img/linkedin.png" alt="Logo azul da Rede Social LinkIn"> 
+       </a> 
+
+       <a href="github.com/githubdaestela" target="_blank"> 
+           <img class="tm-social" src="assets/img/github.png" alt="Logo preto da palataforma de versionamento GitHub"> 
+       </a>
+    </div>
+
+       <p>Todos os direitos reservados: Estela Maria &copy</p>
+  </footer>
 
 </body>
 </html>
